syntax = "proto3";

package user;

option go_package = "github.com/MangoSteen0903/grpc-go-tutorial/user";

service UserService { rpc GetUser(GetUserRequest) returns (GetUserResponse); }

message UserMessage {
  string user_id = 1;
  string name = 2;
  string phone_number = 3;
  int32 age = 4;
}

message GetUserRequest { string user_id = 1; }

message GetUserResponse { UserMessage user_message = 1; }
